# ChangeLog for media-plugins/vdr-xmltv2vdr
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*vdr-xmltv2vdr-9999 (30 Jun 2011)

  30 Jun 2011; kTitan +vdr-xmltv2vdr-9999.ebuild:
  inital ebuild
