@@ -1,3 +1,3 @@
-EBUILD vdr-xmltv2vdr-9999.ebuild 628 RMD160 71a14059e327b774c2142f762de61ae2e7e695e1 SHA1 7dbbb6b689d697f0ddc309ae375abff62453d854 SHA256 190e112361903600551c467bc412fe007209b225e86624723a2605d339d0f424
-MISC ChangeLog 230 RMD160 067e8c23bc4377297d8c08b1701e074041131052 SHA1 97c938e7f53de3293c918af68f116493289de134 SHA256 6cf3b9318c4aa78c8102cd749396f47d12156c00930e65a6f2c74c924af5d8cc
-MISC metadata.xml 139 RMD160 c84b2b78f85074cc5c7d26cb757d91c8384fa16a SHA1 00e3ae2ead875413d94aeafa5279646740c2c21d SHA256 5cdc1888ebc8807b9a37b1d33429c61cabe7415a4f240e21a4c2ff8eca7a34ed
+EBUILD vdr-xmltv2vdr-9999.ebuild 1023 RMD160 95354af3b5a1eb92c513dab49bf967a1cfd1cd9d SHA1 1a2f97420b1fe8a3db93e54ebd83070315ea912b SHA256 aadea2de231174f6e634866fd5386b3a1ea3e2d9a5484714da8d86ff032f555e
+MISC ChangeLog 361 RMD160 8249493a0e226e062abee071c61ce907805c48ed SHA1 dd5f860d558bb609a2b243f6c89798137af4e0fe SHA256 38182e3fa343f65d5e049442c2aad29441de67a4f1f43c59658a8ce98d5dc985
+MISC metadata.xml 210 RMD160 0108091ec4798609542d9b9bdd79a5b1cbc365fc SHA1 befbc87be4e48f50995ca03af42e95433c42913f SHA256 e3d9cf036f08600404f31c28f668eeafbf7c39e254c5bedb0bc170dc47deaa34
