@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
+<use>
+<flag name="epgdata">Build grabber for epgdata.com</flag>
+</use>
 </pkgmetadata>
