@@ -2,6 +2,9 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  25 Jul 2011; kTitan vdr-xmltv2vdr-9999.ebuild, metadata.xml:
+  Added compile for epgdata.com grabber, activate it with USE flag
+
 *vdr-xmltv2vdr-9999 (30 Jun 2011)
 
   30 Jun 2011; kTitan +vdr-xmltv2vdr-9999.ebuild:
